Fixing spacing of empty state on org profile header

--- a/kifi-backend/modules/shoebox/angular/src/common/directives/clickToEdit/clickToEdit.styl
+++ b/kifi-backend/modules/shoebox/angular/src/common/directives/clickToEdit/clickToEdit.styl
@@ -27,6 +27,12 @@ editButtonWidth = 40px
     word-wrap: break-word
     resize: none
 
+  .kf-click-to-edit-p
+    margin-bottom: 0px
+
+    + .kf-click-to-edit-p
+      margin-top: 5px
+
   &.editable
     &:hover
       textarea
